syntax = "proto3";

package admin.service.v1;

option go_package = "github.com/go-tangra/go-tangra-portal/api/gen/go/admin/service/v1;adminV1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "gnostic/openapi/v3/annotations.proto";
import "lcm/service/v1/statistics.proto";
import "deployer/service/v1/statistics.proto";
import "paperless/service/v1/statistics.proto";
import "ipam/service/v1/system.proto";

// Platform Statistics Service provides aggregated statistics for the admin dashboard
service PlatformStatisticsService {
  // GetPlatformStatistics returns comprehensive statistics about the platform
  rpc GetPlatformStatistics (GetPlatformStatisticsRequest) returns (GetPlatformStatisticsResponse) {
    option (google.api.http) = {
      get: "/admin/v1/statistics"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Get platform statistics"
      description: "Returns comprehensive statistics about users, tenants, and LCM service"
      tags: ["Statistics"]
    };
  }
}

// GetPlatformStatisticsRequest is the request message for GetPlatformStatistics
message GetPlatformStatisticsRequest {
  // Number of days to consider for "expire soon" certificates (default: 30)
  optional int32 expire_soon_days = 1 [
    (gnostic.openapi.v3.property) = {description: "Days threshold for expire soon certificates"}
  ];

  // Number of recent errors to return (default: 10)
  optional int32 recent_errors_limit = 2 [
    (gnostic.openapi.v3.property) = {description: "Maximum number of recent errors to return"}
  ];
}

// GetPlatformStatisticsResponse is the response message for GetPlatformStatistics
message GetPlatformStatisticsResponse {
  // Admin/User statistics
  AdminStatistics admin = 1;

  // LCM statistics (from LCM service)
  lcm.service.v1.GetStatisticsResponse lcm = 2;

  // Deployer statistics (from Deployer service)
  deployer.service.v1.GetStatisticsResponse deployer = 3;

  // Paperless statistics (from Paperless service)
  paperless.service.v1.GetStatisticsResponse paperless = 4;

  // IPAM statistics (from IPAM service)
  ipam.service.v1.GetStatsResponse ipam = 5;

  // Statistics generation timestamp
  google.protobuf.Timestamp generated_at = 10;
}

// AdminStatistics contains statistics about users and tenants
message AdminStatistics {
  // User statistics
  UserStatistics users = 1;

  // Tenant statistics
  TenantStatistics tenants = 2;

  // Role statistics
  RoleStatistics roles = 3;
}

// UserStatistics contains statistics about users
message UserStatistics {
  // Total number of users
  int64 total_count = 1 [
    (gnostic.openapi.v3.property) = {description: "Total number of users"}
  ];

  // Number of active users
  int64 active_count = 2 [
    (gnostic.openapi.v3.property) = {description: "Number of active users"}
  ];

  // Number of inactive users
  int64 inactive_count = 3 [
    (gnostic.openapi.v3.property) = {description: "Number of inactive users"}
  ];

  // Number of locked users
  int64 locked_count = 4 [
    (gnostic.openapi.v3.property) = {description: "Number of locked users"}
  ];

  // Number of disabled users
  int64 disabled_count = 5 [
    (gnostic.openapi.v3.property) = {description: "Number of disabled users"}
  ];

  // Users grouped by status
  map<string, int64> by_status = 6;
}

// TenantStatistics contains statistics about tenants
message TenantStatistics {
  // Total number of tenants
  int64 total_count = 1 [
    (gnostic.openapi.v3.property) = {description: "Total number of tenants"}
  ];

  // Number of active tenants
  int64 active_count = 2 [
    (gnostic.openapi.v3.property) = {description: "Number of active tenants"}
  ];

  // Number of inactive tenants
  int64 inactive_count = 3 [
    (gnostic.openapi.v3.property) = {description: "Number of inactive tenants"}
  ];

  // Number of suspended tenants
  int64 suspended_count = 4 [
    (gnostic.openapi.v3.property) = {description: "Number of suspended tenants"}
  ];

  // Tenants grouped by status
  map<string, int64> by_status = 5;

  // Tenants grouped by type
  map<string, int64> by_type = 6;
}

// RoleStatistics contains statistics about roles
message RoleStatistics {
  // Total number of roles
  int64 total_count = 1 [
    (gnostic.openapi.v3.property) = {description: "Total number of roles"}
  ];

  // Number of active roles
  int64 active_count = 2 [
    (gnostic.openapi.v3.property) = {description: "Number of active roles"}
  ];
}
